--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version" : 2,
 	"name" : "京东抢拍",
 	"description" : "京东夺宝岛抢拍-谁与争锋",
-	"version" : "0.1",
+	"version" : "0.3",
 	"permissions" : [
 		"tabs",
 		"http://auction.jd.com/*"
@@ -13,17 +13,18 @@
 		"128":"imgs/Z128.png"
 	},
 	"web_accessible_resources" : [
-		"js/jquery.min.js", "js/jd.js"
+		"js/jquery.min.js",
+	    "js/jd.js"
 	],
 	"content_scripts" : [
 		{
-			"matches" : ["http://auction.jd.com/detail/*"],
+			"matches" : ["http://auction.jd.com/*"],
 			"css" : ["css/jd.css"],
 			"js" : ["js/jquery.min.js", "js/jd.js"]
 		}
 	],
 	"browser_action" : {
 		"default_icon" : "imgs/Z128.png",
-		"default_title" : "京东夺宝岛扛把子"
+		"default_title" : "京东夺宝岛抢拍"
 	}
 }
